syntax = "proto3";

message RandRequest {
  int64  max=1;
}

message RandResponse {
  int64 result = 11;
}

service Rand {
  rpc GetRand (RandRequest) returns (RandResponse) {}
}